fix menu bar scrollbar issue

--- a/app/assets/stylesheets/base/page.scss
+++ b/app/assets/stylesheets/base/page.scss
@@ -75,7 +75,7 @@
 
     .page-menu + .page-content {
       margin-left: $menu-width;
-      width: calc(100vw - #{$menu-width});
+      width: calc(100vw - #{$menu-width} - 2rem);
     }
 
     .page-menu {
